Fix nav alignment on mobile devices

--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -81,8 +81,11 @@
   svg {
     position: relative;
     top: 3px;
-    left: -10px;
     transition: all 1s;
+
+    @media(min-width: 621px) {
+      left: -10px;
+    }
   }
 
   @media (max-width: 620px) {
